--- a/styles/style.css
+++ b/styles/style.css
@@ -13,12 +13,26 @@
 #primary-color {
   color: rgb(58, 58, 58);
 }
+.primary-btn {
+  background-color: rgb(224, 44, 109);
+  color: rgb(255, 255, 255);
+  padding: 10px 24px 10px 24px;
+  border: none;
+  border-radius: 40px;
+  cursor: pointer;
+  font-size: 1rem;
+  font-weight: 700;
+}
 
 /* header styles */
-.navbar {
+.navbar,
+.banner-section {
   max-width: 1300px;
   margin: 0 auto;
+}
+.navbar {
   justify-content: space-between;
+  align-items: center;
 }
 .nav-links {
   gap: 2rem;
@@ -28,4 +42,33 @@
 }
 .nav-links li {
   list-style: none;
+}
+/* Start your Journey as Influencer */
+.banner-section {
+  justify-content: space-between;
+  align-items: center;
+  gap: 133px;
+}
+.banner-text {
+  width: 582px;
+  height: 270px;
+}
+.banner-title {
+  font-size: 3.25rem;
+  font-weight: 700;
+  margin: 16px 0;
+}
+.banner-subtitle {
+  font-size: 1rem;
+  font-weight: 600;
+}
+
+.banner-img {
+  background-image: url("../images/Circle-design.svg");
+  width: 475px;
+  height: 475px;
+}
+.banner-img img {
+  width: 440px;
+  height: 414px;
 }
