--- a/styles/style.css
+++ b/styles/style.css
@@ -5,6 +5,13 @@
   font-weight: 400;
   font-style: normal;
 }
+header {
+  max-width: 1300px;
+  margin: 0 auto;
+}
+.hidden {
+  visibility: hidden;
+}
 
 /* Shared Style */
 .display-flex {
@@ -27,8 +34,7 @@
 /* header styles */
 .navbar,
 .banner-section {
-  max-width: 1300px;
-  margin: 0 auto;
+  width: 100%;
 }
 .navbar {
   justify-content: space-between;
@@ -72,3 +78,23 @@
   width: 440px;
   height: 414px;
 }
+/* company logo styles */
+.companys {
+  background: linear-gradient(
+    rgba(192, 204, 218, 0.1),
+    rgba(192, 204, 218, 0.6),
+    rgba(192, 204, 218, 0.1)
+  );
+  width: 1100px;
+  height: 110px;
+  margin: 0 auto;
+  border: 2px solid red;
+}
+.company-logos {
+  text-align: center;
+  align-items: center;
+  justify-content: space-between;
+}
+
+/* Responsive design start  */
+/* Mobile device */
