Featured products at one place done

--- a/styles/style.css
+++ b/styles/style.css
@@ -5,12 +5,13 @@
   font-weight: 400;
   font-style: normal;
 }
+main,
 header {
   max-width: 1300px;
   margin: 0 auto;
 }
-.hidden {
-  visibility: hidden;
+#hidden {
+  display: none;
 }
 
 /* Shared Style */
@@ -60,7 +61,7 @@ header {
   height: 270px;
 }
 .banner-title {
-  font-size: 3.25rem;
+  font-size: 52px;
   font-weight: 700;
   margin: 16px 0;
 }
@@ -80,21 +81,130 @@ header {
 }
 /* company logo styles */
 .companys {
-  background: linear-gradient(
-    rgba(192, 204, 218, 0.1),
-    rgba(192, 204, 218, 0.6),
-    rgba(192, 204, 218, 0.1)
-  );
-  width: 1100px;
+  max-width: 1100px;
   height: 110px;
   margin: 0 auto;
-  border: 2px solid red;
-}
-.company-logos {
-  text-align: center;
   align-items: center;
   justify-content: space-between;
+  margin-top: 70px;
+  margin-bottom: 100px;
 }
 
+/* popular-collection styles */
+
+.popular-collection-text {
+  text-align: center;
+  font-size: 28px;
+  font-weight: 600;
+}
+.popular-collection-card {
+  max-width: 1100px;
+  margin: 0 auto;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 30px;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 50px;
+}
+.popular-card {
+  width: 329px;
+  height: 476px;
+  border-radius: 5px;
+  padding: 16px 14px;
+  box-shadow: 0px 0px 40px 0px rgba(0, 0, 0, 0.15);
+  background: rgb(255, 255, 255);
+  text-align: center;
+}
+.popular-card-img {
+  width: 300px;
+  height: 256px;
+  margin-bottom: 16px;
+}
+.popular-card-text {
+  text-align: left;
+}
+.popular-card-title {
+  font-size: 28px;
+  font-weight: 500;
+  color: rgb(24, 25, 31);
+  margin: 0px;
+  margin-bottom: 6px;
+}
+.money {
+  font-size: 24px;
+  font-weight: 400;
+  margin: 0px;
+  margin-bottom: 5px;
+  color: rgba(0, 0, 0, 0.87);
+}
+
+.ratings {
+  padding: 0;
+  color: orange;
+  margin-bottom: 5px;
+}
+.popular-card-subtitle {
+  color: rgb(120, 120, 133);
+  font-family: Inter;
+  font-size: 14px;
+  font-weight: 700;
+  margin: 0px;
+  margin-top: 8px;
+}
+.see-more {
+  text-align: right;
+
+  font-size: 16px;
+  font-weight: 700;
+}
+.see-more a {
+  text-decoration: none;
+  color: rgba(224, 44, 109, 0.87);
+}
+/* Featured products at one place styles */
+.feature-section {
+  max-width: 1100px;
+  margin: 0 auto;
+  gap: 90px;
+  margin-top: 100px;
+  margin-bottom: 100px;
+}
+.feature-text-title {
+  color: rgb(10, 8, 38);
+  font-size: 38px;
+  font-weight: 700;
+  /* full text in one line */
+  white-space: nowrap;
+  margin-bottom: 1rem;
+}
+.feature-text-subtitle {
+  color: rgb(108, 108, 108);
+  font-family: Poppins;
+  font-size: 1rem;
+  font-weight: 700;
+}
+.btn-feature {
+  background-color: rgb(224, 44, 109);
+  color: rgb(255, 255, 255);
+  padding: 10px 24px 10px 24px;
+  border: none;
+  cursor: pointer;
+  font-size: 1rem;
+  font-weight: 700;
+}
 /* Responsive design start  */
 /* Mobile device */
+@media screen and (max-width: 576px) {
+  .navbar {
+    flex-direction: column;
+    width: 90%;
+    margin: 0 auto;
+  }
+  .nav-links {
+    flex-direction: column;
+  }
+  .brand {
+    padding: 0px;
+  }
+}
